--- a/tardis/tardis_portal/templates/tardis_portal/facility_overview.html
+++ b/tardis/tardis_portal/templates/tardis_portal/facility_overview.html
@@ -16,23 +16,29 @@
 {% with request|check_if_facility_manager as facility_manager %}
 <div id="content" class="container-fluid" ng-controller="FacilityController as facilityCtrl">
   {% verbatim %}
-  <h2 class="pull-left" style="color:#999999" ng-cloak>{{facilityCtrl.selectedFacilityName}}</h2>
-  <div class="btn-group pull-right" ng-show="facilityCtrl.showFacilitySelector()" ng-cloak>
-    <a class="btn btn-primary dropdown-toggle"
-       data-toggle="dropdown">Facility: {{facilityCtrl.selectedFacilityName}}
-      <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-        <li style="text-align:center"><strong>Select a
-            facility</strong></li>
-        <li ng-repeat="facility in facilityCtrl.facilities">
-            <a href="#"
-               ng-click="facilityCtrl.selectFacility(facility.id,facility.name)">
-              {{facility.name}}
-            </a>
-        </li>
-    </ul>
-  </div>  <!-- div class="btn-group pull-right" -->
+  <div class="row">
+    <div class="col-md-6">
+      <h2 class="float-left" style="color:#999999" ng-cloak>{{facilityCtrl.selectedFacilityName}}</h2>
+    </div>
+    <div class="col-md-6">
+      <div class="dropdown show float-right" ng-show="facilityCtrl.showFacilitySelector()" ng-cloak>
+        <a class="btn btn-primary dropdown-toggle"
+           data-toggle="dropdown">Facility: {{facilityCtrl.selectedFacilityName}}
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+            <li style="text-align:center"><strong>Select a
+                facility</strong></li>
+            <li class="dropdown-item" ng-repeat="facility in facilityCtrl.facilities">
+                <a href="#"
+                   ng-click="facilityCtrl.selectFacility(facility.id,facility.name)">
+                  {{facility.name}}
+                </a>
+            </li>
+        </ul>
+      </div>  <!-- div class="btn-group pull-right" -->
+    </div>
+  </div>
   {% endverbatim %}
   {% if not facility_manager %}
     <div class="alert alert-block alert-danger">
@@ -42,34 +48,35 @@
     {% verbatim %}
     <div class="row">
         <div class="col-md-12">
-          <div class="well">
-            <div class="row">
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
                 <div class="col-md-8" style="text-align: center" ng-cloak>
                   <!-- Data sorting options -->
                   <ul class="nav nav-pills">
-                    <li ng-click="facilityCtrl.selectDataView(1); unsetFileListVisibility();"
+                    <li class="nav-item" ng-click="facilityCtrl.selectDataView(1); unsetFileListVisibility();"
                         ng-class="{ active:facilityCtrl.isDataViewSelected(1) }">
-                        <a href="#">Latest data</a>
+                        <a class="nav-link" href="#">Latest data</a>
                     </li>
-                    <li ng-click="facilityCtrl.selectDataView(2); facilityCtrl.unsetFileListVisibility();"
+                    <li class="nav-item" ng-click="facilityCtrl.selectDataView(2); facilityCtrl.unsetFileListVisibility();"
                         ng-class="{ active:facilityCtrl.isDataViewSelected(2) }">
-                        <a href="#">Data by instrument</a>
+                        <a class="nav-link" href="#">Data by instrument</a>
                     </li>
-                    <li ng-click="facilityCtrl.selectDataView(3); facilityCtrl.unsetFileListVisibility();"
+                    <li class="nav-item" ng-click="facilityCtrl.selectDataView(3); facilityCtrl.unsetFileListVisibility();"
                         ng-class="{ active:facilityCtrl.isDataViewSelected(3) }">
-                        <a href="#">Data by user</a>
+                        <a class="nav-link" href="#">Data by user</a>
                     </li>
                   </ul>
                 </div>
                 <div class="col-md-4">
                   <!-- Auto-refresh button -->
                   <div class="btn-group pull-right" ng-cloak>
-                    <button type="button" class="btn btn-default"
+                    <button type="button" class="btn btn-outline-secondary"
                             ng-click="facilityCtrl.fetchFacilityData(0,facilityCtrl.defaultFetchLimit); facilityCtrl.refreshCountdown = facilityCtrl.refreshInterval">
                       <i class="fa fa-refresh"></i>
                       Refresh
                     </button>
-                    <button type="button" class="btn btn-default dropdown-toggle"
+                    <button type="button" class="btn btn-outline-secondary dropdown-toggle"
                             data-toggle="dropdown">
                       Auto refresh
                       <span ng-show="facilityCtrl.refreshInterval === 0">(never)</span>
@@ -118,31 +125,35 @@
                 <div class="row" ng-show="facilityCtrl.datasets.length" ng-cloak>
                   <!-- Data filters -->
                   <div class="col-md-12">
-                    <form class="well form-inline">
-                      <div class="form-group">
-                        <label>Filter by:</label>
+                    <div class="card">
+                      <div class="card-body">
+                        <form class="form-inline">
+                      <div class="form-group mr-2">
+                        <label class="mr-2">Filter by:</label>
                         <input type="text" class="input-small form-control"
                                placeholder="user name"
                                ng-model="facilityCtrl.search_owner.owner">
                       </div>
-                      <div class="form-group">
+                      <div class="form-group mr-2">
                         <label class="sr-only">Experiment:</label>
                         <input type="text" class="input-small form-control"
                                placeholder="experiment"
                                ng-model="facilityCtrl.search_experiment.parent_experiment.title">
                       </div>
-                      <div class="form-group">
+                      <div class="form-group mr-2">
                         <label class="sr-only">Instrument:</label>
                         <input type="text" class="input-small form-control"
                                placeholder="instrument"
                                ng-model="facilityCtrl.search_instrument.instrument.name">
                       </div>
-                      <button type="button" class="btn btn-default"
+                      <button type="button" class="btn btn-outline-secondary"
                               ng-click="facilityCtrl.filterFormReset()">
                           <i class="fa fa-remove"></i>
                           Clear filters
                       </button>
                     </form>
+                      </div>
+                    </div>
                   </div>  <!-- col-md-12 -->
                 </div>  <!-- row -->
                 <div class="row">
@@ -286,6 +297,7 @@
                 </div>
               </div>  <!-- col-md-12 -->
             </div>  <!-- row -->
+            </div>
           </div>  <!-- well -->
         </div>  <!-- col-md-12 -->
     </div>  <!-- row  -->
